--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,16 +6,17 @@
     "com.unity.cinemachine": "2.9.7",
     "com.unity.collections": "2.1.4",
     "com.unity.editorcoroutines": "1.0.0",
-    "com.unity.entities": "1.0.10",
-    "com.unity.entities.graphics": "1.0.10",
+    "com.unity.entities": "1.0.11",
+    "com.unity.entities.graphics": "1.0.11",
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.6.1",
     "com.unity.mathematics": "1.2.6",
     "com.unity.memoryprofiler": "1.0.0",
-    "com.unity.physics": "1.0.10",
+    "com.unity.physics": "1.0.11",
     "com.unity.profiling.core": "1.0.2",
     "com.unity.render-pipelines.core": "14.0.8",
+    "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.scriptablebuildpipeline": "1.21.5",
     "com.unity.serialization": "3.1.1",
     "com.unity.test-framework": "1.1.33",
